# zak-ai

./: .gitignore  README.md
.github/: CODEOWNERS  pull_request_template.md
capability-compiler/: package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
capability-registry/: package-lock.json  package.json  tsconfig.json
docs/: CAPABILITY_DEFINITION_TEMPLATE.md  GOVERNANCE_BASELINE.md  capability-definition-hash-enforcement.md
draft-test-harness/: .gitignore  README.md  package-lock.json  package.json  sample.env  server.js  start.sh
engine/: __init__.py  adapter_attestation.py  adapters_runtime.py  capability_snapshot.json  capability_snapshot.py  constitution_resolver.py  constitutions.json  dependency_map.json  gold_bridge.py  gold_invoke.mjs  gold_runtime.py  indexer.py  main.py  project_paths.py  proxy.py  receipts.py  test_capability_definition_hash.py  test_capability_snapshot.py  test_constitution_resolver.py  test_proxy_boundaries.py  test_proxy_memory.py
zak-adapters/: .gitignore  DESIGN_ASSURANCE_DOCUMENT.md  Dockerfile  KERNEL_ADAPTER_RESPONSIBILITY_MATRIX.md  README.md  REPORT_TECHNICAL.md  benchmark_zak.py  package-lock.json  package.json  pulse_test.py  tsconfig.json  verify_zak.py  zak_invariant.md
zak-adapters/zak-ingress-sentry/zak-sentry-ebpf/: Cargo.toml
zak-adapters/zak-ingress-sentry/zak-sentry-ebpf/src/: main.rs
zak-adapters/zak-ingress-sentry/zak-sentry-user/: Cargo.toml
zak-adapters/zak-ingress-sentry/zak-sentry-user/src/: main.rs
zak-core/: .gitignore  README.md  jest.config.js  package-lock.json  (+2 more)
(+218 files in other folders)
